[package]
name = "rust-sqlx-transaction-di"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0"
mockall = "0"
sqlx = { version = "0", features = ["postgres", "runtime-tokio", "sqlx-postgres"] }
tokio = { version = "1", features = ["tokio-macros", "rt-multi-thread", "macros"] }
thiserror = { version = "1" }
